[project]
name = "aol-stalker-2025"
version = "0.1.0"
description = "Revisiting the 2006 AOL search log release"
readme = "README.md"
authors = [
    { name = "Linus Mixson", email = "lmixson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
aol-stalker-2025 = "aol_stalker_2025:main"

[build-system]
requires = ["uv_build>=0.7.8,<0.8"]
build-backend = "uv_build"
