[project]
name = "aol-stalker-2025"
version = "0.1.0"
description = "Revisiting the 2006 AOL search log release"
readme = "README.md"
authors = [
    { name = "Linus Mixson", email = "lmixson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.119.1",
    "numpy>=2.3.4",
    "pgvector>=0.4.1",
    "psycopg>=3.2.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "voyageai>=0.3.5",
]

[project.scripts]
aol-stalker-2025 = "aol_stalker_2025:main"

[build-system]
requires = ["uv_build>=0.7.8,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",  # redundant with formatter & not recommended
    "D",       # not a big docstring guy
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
explicit_package_bases = true
